FIX: 留存代码，关于dubbo和RestTemplate冲突解决方案 有说是因为序列化导致的

--- a/consumer-8801/src/main/resources/application.yml
+++ b/consumer-8801/src/main/resources/application.yml
@@ -24,6 +24,10 @@ dubbo:
     name: consumer8801
   registry:
     address: nacos://localhost:8848
+  protocol:
+    name: dubbo
+    port: 20880
+    serialization: json
 logging:
   level:
     org.xujiaqi: debug
