--- a/consumer-8801/pom.xml
+++ b/consumer-8801/pom.xml
@@ -67,7 +67,11 @@
 <!--            <artifactId>sentinel-datasource-nacos</artifactId>-->
 <!--        </dependency>-->
 
-
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-serialization-fastjson2</artifactId>
+            <version>3.2.4</version>
+        </dependency>
 
 
 
