--- a/consumer-8801/src/main/resources/application.yml
+++ b/consumer-8801/src/main/resources/application.yml
@@ -6,9 +6,18 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848
-        #,localhost:1111
+        server-addr: localhost:8848 #,localhost:1111
 
+dubbo:
+  scan:
+    base-packages: org.xujiaqi
+  protocol:
+    name: dubbo
+    port: -1
+  registry:
+    address: spring-cloud://localhost
+  application:
+    name: ${spring.application.name}
 #      config:
 #        server-addr: localhost:8848
 #        prefix: spring-cloud-alibaba-demo
@@ -19,15 +28,6 @@ spring:
 #      transport:
 #        dashboard: localhost:8080
 
-dubbo:
-  application:
-    name: consumer8801
-  registry:
-    address: nacos://localhost:8848
-  protocol:
-    name: dubbo
-    port: 20880
-    serialization: json
 logging:
   level:
     org.xujiaqi: debug
