FIX: 修复了dubbo和springcloud不兼容的问题，更换jar包。

--- a/consumer-8801/src/main/resources/application.yml
+++ b/consumer-8801/src/main/resources/application.yml
@@ -18,6 +18,8 @@ dubbo:
     address: spring-cloud://localhost
   application:
     name: ${spring.application.name}
+  cloud:
+    subscribed-services: spring-cloud-alibaba-provider
 #      config:
 #        server-addr: localhost:8848
 #        prefix: spring-cloud-alibaba-demo
