FEAT: 先接入mysql,再接入seata

--- a/consumer-8801/src/main/resources/application.yml
+++ b/consumer-8801/src/main/resources/application.yml
@@ -1,34 +1,17 @@
-server:
-  port: 8801
-spring:
-  application:
-    name: spring-cloud-alibaba-consumer
-  cloud:
-    nacos:
-      discovery:
-        server-addr: localhost:8848 #,localhost:1111
-
 dubbo:
   scan:
     base-packages: org.xujiaqi
   protocol:
     name: dubbo
+    #自动分配端口
     port: -1
   registry:
+    #如果是使用springcloud的注册中心,就直接填这个就可以了(固定值)
     address: spring-cloud://localhost
   application:
     name: ${spring.application.name}
   cloud:
     subscribed-services: spring-cloud-alibaba-provider
-#      config:
-#        server-addr: localhost:8848
-#        prefix: spring-cloud-alibaba-demo
-#        namespace: 0197005d-9c2a-468f-8956-59029e00937b
-#        file-extension: yaml
-#        group: DEFAULT_GROUP
-#    sentinel:
-#      transport:
-#        dashboard: localhost:8080
 
 logging:
   level:
